--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -89,22 +89,72 @@
         </div>
       </div>
     {{/if}}
-    <div class="result-username">
-      <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
-      <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextUsername}}
-        title={{if @encryptable.isPasswordBlank this.noCopyBlankUsernameTooltip ""}}
-        @success={{fn this.onCopied "username"}} disabled={{@encryptable.isUsernameBlank}} >
-        <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-      </CopyButton>
-    </div>
-    <a role="button" class="correct-pixel-error-omg show-password-button show-text {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_password"}}</a>
-    <div class="result-password">
-      <Input id="cleartext_password" class="d-inline form-control {{if this.isPasswordVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
-      <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextPassword}}
-        title={{if @encryptable.isPasswordBlank this.noCopyBlankPasswordTooltip ""}}
-        @success={{fn this.onCopied "password"}} disabled={{@encryptable.isPasswordBlank}} >
-        <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-      </CopyButton>
+    <div class="encryptable-attributes">
+      {{#if @encryptable.cleartextUsername}}
+        <div class="result-username">
+          <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
+          <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextUsername}}
+            title={{if @encryptable.isPasswordBlank this.noCopyBlankTooltip ""}}
+            @success={{fn this.onCopied "username"}} disabled={{@encryptable.isUsernameBlank}} >
+            <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+          </CopyButton>
+        </div>
+      {{/if}}
+      {{#if @encryptable.cleartextPassword}}
+        <a role="button" class="correct-pixel-error-omg show-hidden-attribute-button show-text {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" (action "showValue" "password")}}>{{t "encryptable/credentials.show.show_password"}}</a>
+        <div class="result-hidden-attribute">
+          <Input id="cleartext_password" class="d-inline form-control {{if this.isPasswordVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
+          <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextPassword}}
+            title={{if @encryptable.isPasswordBlank this.noCopyBlankTooltip ""}}
+            @success={{fn this.onCopied "password"}} disabled={{@encryptable.isPasswordBlank}} >
+            <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+          </CopyButton>
+        </div>
+      {{/if}}
+      {{#if @encryptable.cleartextPin}}
+        <a role="button" class="correct-pixel-error-omg show-hidden-attribute-button show-text {{if this.isPinVisible "visibility-hidden"}}" {{on "click" (action "showValue" "pin")}}>{{t "encryptable/credentials.show.show_pin"}}</a>
+        <div class="result-hidden-attribute">
+          <Input id="cleartext_pin" class="d-inline form-control {{if this.isPinVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextPin}}/>
+          <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextPin}}
+            title={{if @encryptable.isPinBlank this.noCopyBlankTooltip ""}}
+            @success={{fn this.onCopied "pin"}} disabled={{@encryptable.isPinBlank}} >
+            <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+          </CopyButton>
+        </div>
+      {{/if}}
+      {{#if @encryptable.cleartextToken}}
+        <a role="button" class="correct-pixel-error-omg show-hidden-attribute-button show-text {{if this.isTokenVisible "visibility-hidden"}}" {{on "click" (action "showValue" "token")}}>{{t "encryptable/credentials.show.show_token"}}</a>
+        <div class="result-hidden-attribute">
+          <Input id="cleartext_token" class="d-inline form-control {{if this.isTokenVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextToken}}/>
+          <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextToken}}
+            title={{if @encryptable.isTokenBlank this.noCopyBlankTooltip ""}}
+            @success={{fn this.onCopied "token"}} disabled={{@encryptable.isTokenBlank}} >
+            <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+          </CopyButton>
+        </div>
+      {{/if}}
+      {{#if @encryptable.cleartextEmail}}
+        <a role="button" class="correct-pixel-error-omg show-hidden-attribute-button show-text {{if this.isEmailVisible "visibility-hidden"}}" {{on "click" (action "showValue" "email")}}>{{t "encryptable/credentials.show.show_email"}}</a>
+        <div class="result-hidden-attribute">
+          <Input id="cleartext_email" class="d-inline form-control {{if this.isEmailVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextEmail}}/>
+          <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextEmail}}
+            title={{if @encryptable.isEmailBlank this.noCopyBlankTooltip ""}}
+            @success={{fn this.onCopied "email"}} disabled={{@encryptable.isEmailBlank}} >
+            <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+          </CopyButton>
+        </div>
+      {{/if}}
+      {{#if @encryptable.cleartextCustomAttr}}
+        <a role="button" class="correct-pixel-error-omg show-hidden-attribute-button show-text {{if this.isCustomAttrVisible "visibility-hidden"}}" {{on "click" (action "showValue" "customAttr")}}>{{t "encryptable/credentials.show.show"}} {{@encryptable.cleartextCustomAttr.label}}</a>
+        <div class="result-hidden-attribute">
+          <Input id="cleartext_custom-attr" class="d-inline form-control {{if this.isCustomAttrVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextCustomAttr.value}}/>
+          <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextCustomAttr.value}}
+            title={{if @encryptable.isCustomAttrBlank this.noCopyBlankTooltip ""}}
+            @success={{fn this.onCopied "custom-attr"}} disabled={{@encryptable.isCustomAttrBlank}} >
+            <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+          </CopyButton>
+        </div>
+      {{/if}}
     </div>
     <div class="d-flex flex-row justify-content-between mb-2">
       <div>
