--- a/frontend/app/templates/components/encryptable/form.hbs
+++ b/frontend/app/templates/components/encryptable/form.hbs
@@ -6,96 +6,178 @@
     <Modal.body>
       <div class="container-fluid">
         <BsForm @model={{this.changeset}} as |form|>
-          <div class="row">
-            {{#if this.hasErrors}}
-              <div class="col-12 order-1">
-                <div class="alert alert-danger modal-alert">
-                  {{t "validations.name.duplicate_name"}}
+          <div class="encryptable-form-name">
+            <div class="row">
+              {{#if this.hasErrors}}
+                <div class="col-12 order-1">
+                  <div class="alert alert-danger modal-alert">
+                    {{t "validations.name.duplicate_name"}}
+                  </div>
                 </div>
+              {{/if}}
+              <div class="col-md-6 order-2">
+                <form.group class="col-md-12">
+                  <form.element @property="name" @label={{t "helpers.label.encryptable/credentials.accountname"}}
+                                class={{if this.changeset.error.name.validation
+                                                               "invalid-input-name"}}
+                                id="name"
+                                @customError={{t (validation-error-key this.changeset.error.name.validation)}} as |el|>
+                    <el.control autocomplete="off" @name="name" tabindex="1"></el.control>
+                  </form.element>
+                </form.group>
               </div>
-            {{/if}}
-            <div class="col-md-6 order-2">
-              <form.group class="col-md-12">
-                <form.element @property="name" @label={{t "helpers.label.encryptable/credentials.accountname"}}
-                              class={{if this.changeset.error.name.validation
-                                                             "invalid-input-name"}}
-                              id="name"
-                              @customError={{t (validation-error-key this.changeset.error.name.validation)}} as |el|>
-                  <el.control autocomplete="off" @name="name" tabindex="1"></el.control>
-                </form.element>
-              </form.group>
-              <form.group class="form-group col-md-12">
-                <form.element @label={{t "username"}} id="username" class={{if
-                        this.changeset.error.cleartextUsername.validation "invalid-input-name"}}
-                              @property="cleartextUsername" @customError={{t
-                        (validation-error-key this.changeset.error.cleartextUsername.validation)}} as |el|>
-                  <el.control @name="cleartextUsername" tabindex="2"></el.control>
-                </form.element>
-              </form.group>
-            </div>
-            <div class="col-md-6 ml-auto order-5 order-md-3">
-              <div class="form-group col-md-12" id="team-power-select">
-                <form.element @label={{t "team"}} @controlType="power-select"
-                              @options={{this.assignableTeams}} @value={{this.selectedTeam}}
-                              @customError={{t (validation-error-key this.changeset.error.team.validation)}} as |el|>
-                  <el.control class={{if this.changeset.error.team.validation "invalid-input-ps"}} @placeholder={{t "encryptable/credentials.edit.team_placeholder"}}
-                              @renderInPlace={{true}} @onChange={{this.setSelectedTeam}} as |team|>
-                    {{#if team.isPersonalTeam }}
-                      {{this.userService.username}}
-                    {{else}}
-                      {{team.name}}
-                    {{/if}}
-                  </el.control>
-                </form.element>
-              </div>
-              <div class="form-group col-md-12" id="folder-power-select">
-                <form.element @options={{this.availableFolders}} @label={{t "folder"}} @controlType="power-select"
-                              @value={{this.changeset.folder}}
-                              @searchEnabled={{true}} @allowClear={{true}} @searchField={{"name"}}
-                              @customError={{t (validation-error-key this.changeset.error.folder.validation)}} as |el|>
-                  <el.control class={{if this.changeset.error.folder.validation "invalid-input-ps"}}
-                              @disabled={{this.isFolderDropdownDisabled}}
-                              @placeholder={{t "encryptable/credentials.edit.folder_placeholder"}}
-                              @renderInPlace={{true}} @onChange={{this.setFolder}} as |folder|>
-                    {{folder.name}}
-                  </el.control>
-                </form.element>
+              <div class="col-md-6 order-2">
+                <div class="form-group col-md-12" id="team-power-select">
+                  <form.element @label={{t "team"}} @controlType="power-select"
+                                @options={{this.assignableTeams}} @value={{this.selectedTeam}}
+                                @customError={{t (validation-error-key this.changeset.error.team.validation)}} as |el|>
+                    <el.control class={{if this.changeset.error.team.validation "invalid-input-ps"}} @placeholder={{t "encryptable/credentials.edit.team_placeholder"}}
+                                @renderInPlace={{true}} @onChange={{this.setSelectedTeam}} as |team|>
+                      {{#if team.isPersonalTeam }}
+                        {{this.userService.username}}
+                      {{else}}
+                        {{team.name}}
+                      {{/if}}
+                    </el.control>
+                  </form.element>
+                </div>
+                <div class="form-group col-md-12" id="folder-power-select">
+                  <form.element @options={{this.availableFolders}} @label={{t "folder"}} @controlType="power-select"
+                                @value={{this.changeset.folder}}
+                                @searchEnabled={{true}} @allowClear={{true}} @searchField={{"name"}}
+                                @customError={{t (validation-error-key this.changeset.error.folder.validation)}} as |el|>
+                    <el.control class={{if this.changeset.error.folder.validation "invalid-input-ps"}}
+                                @disabled={{this.isFolderDropdownDisabled}}
+                                @placeholder={{t "encryptable/credentials.edit.folder_placeholder"}}
+                                @renderInPlace={{true}} @onChange={{this.setFolder}} as |folder|>
+                      {{folder.name}}
+                    </el.control>
+                 </form.element>
+               </div>
               </div>
             </div>
-
-            <div class="col-md-6 order-3 order-md-4">
-              <div class="col-sm-12 secret">
-                <form.element @label={{t "password"}} id="cleartext-password" class={{if
-                        this.changeset.error.cleartextPassword.validation "invalid-input-name"}}
-                              @property="cleartextPassword" @customError={{t
-                        (validation-error-key this.changeset.error.cleartextPassword.validation)}} as |el|>
-                  <el.control autocomplete="off" tabindex="3" @name="cleartextPassword" ></el.control>
-                </form.element>
-                <PasswordStrengthMeter class="col-12 col-lg-9 px-0 mb-2 mb-md-0" @password={{this.changeset.cleartextPassword}}/>
-              </div>
-            </div>
-            <div class="col-md-6 mb-3 mb-md-0 d-flex align-items-center order-4 order-md-5">
-              <div class="col-md-12">
-                <button class="btn btn-secondary btn-block col-lg-7 mb-md-4" {{on "click" this.setRandomPassword}}
-                        tabindex="4">
-                  {{t "encryptable/credentials.edit.random_password"}}
-                </button>
-              </div>
+            <form.group class="col-md-12">
+              <form.element @label={{t "description"}} @property="description" @controlType="textarea"
+                            id="description" class="{{if
+                      this.changeset.error.description.validation "invalid-input"}} vertical-resize"
+                            customError={{t
+                      (validation-error-key this.changeset.error.description.validation)}} as |el|>
+                <el.control tabindex="7"></el.control>
+              </form.element>
+            </form.group>
+          </div>
+          <div class="encryptable-form-attributes">
+            <div class="row">
+              {{#if this.isUsernameFieldActive}}
+                <div id="username-field" class="col-md-6 pt-2 encryptable-form-field">
+                  <form.group class="col-md-12">
+                    <form.element @label={{t "username"}} id="username" class={{if
+                            this.changeset.error.cleartextUsername.validation "invalid-input-name"}}
+                                  @property="cleartextUsername" @customError={{t
+                            (validation-error-key this.changeset.error.cleartextUsername.validation)}} as |el|>
+                      <el.control @name="cleartextUsername" tabindex="2"></el.control>
+                    </form.element>
+                  </form.group>
+                  <img {{on "click" (action "hideField" "username")}} class="d-inline delete-field" src="/assets/images/delete-white.svg" alt="delete attribute field">
+                </div>
+              {{/if}}
+              {{#if this.isPasswordFieldActive}}
+                <div id="password-field" class="col-md-6 pt-2 encryptable-form-field">
+                  <form.group class="col-md-12 secret password-field">
+                    <form.element @label={{t "password"}} id="cleartext-password" class={{if
+                      this.changeset.error.cleartextPassword.validation "invalid-input-name"}}
+                        @property="cleartextPassword" @customError={{t
+                          (validation-error-key this.changeset.error.cleartextPassword.validation)}} as |el|>
+                      <img class="d-inline encrypted-icon" src="/assets/images/encrypted_small.svg" alt="encrypted value">
+                      <el.control type="password" autocomplete="off"  @name="cleartextPassword" tabindex="2"></el.control>
+                    </form.element>
+                  </form.group>
+                  <img {{on "click" (action "hideField" "password")}} class="d-inline delete-field" src="/assets/images/delete-white.svg" alt="delete attribute field">
+                  <PasswordStrengthMeter class="col-12 col-lg-9 px-0 mb-2 mb-md-0 ml-3" @password={{this.changeset.cleartextPassword}}/>
+                  <div></div>
+                  <button class="btn btn-secondary btn-block col-lg-7 mb-md-4 ml-3 mt-2" {{on "click" this.setRandomPassword}}
+                         tabindex="4">
+                    {{t "encryptable/credentials.edit.random_password"}}
+                  </button>
+                </div>
+              {{/if}}
+              {{#if this.isTokenFieldActive}}
+                <div id="token-field" class="col-md-6 pt-2 encryptable-form-field">
+                  <form.group class="col-md-12">
+                    <form.element @label={{t "token"}} id="token" class={{if
+                            this.changeset.error.cleartextToken.validation "invalid-input-name"}}
+                                  @property="cleartextToken" @customError={{t
+                            (validation-error-key this.changeset.error.cleartextToken.validation)}} as |el|>
+                      <img class="d-inline encrypted-icon" src="/assets/images/encrypted_small.svg" alt="encrypted value">
+                      <el.control @name="cleartextToken" tabindex="2"></el.control>
+                    </form.element>
+                  </form.group>
+                  <img {{on "click" (action "hideField" "token")}} class="d-inline delete-field" src="/assets/images/delete-white.svg" alt="delete attribute field">
+                </div>
+              {{/if}}
+              {{#if this.isPinFieldActive}}
+                <div id="pin-field" class="col-md-6 pt-2 encryptable-form-field">
+                  <form.group class="col-md-12">
+                    <form.element @label={{t "pin"}} id="pin" class={{if
+                            this.changeset.error.cleartextPin.validation "invalid-input-name"}}
+                                  @property="cleartextPin" @customError={{t
+                            (validation-error-key this.changeset.error.cleartextPin.validation)}} as |el|>
+                      <img class="d-inline encrypted-icon" src="/assets/images/encrypted_small.svg" alt="encrypted value">
+                      <el.control @name="cleartextPin" tabindex="2"></el.control>
+                    </form.element>
+                  </form.group>
+                  <img {{on "click" (action "hideField" "pin")}} class="d-inline delete-field" src="/assets/images/delete-white.svg" alt="delete attribute field">
+                </div>
+              {{/if}}
+              {{#if this.isEmailFieldActive}}
+                <div id="email-field" class="col-md-6 pt-2 encryptable-form-field">
+                  <form.group class="col-md-12">
+                    <form.element @label={{t "email"}} id="email" class={{if
+                            this.changeset.error.cleartextEmail.validation "invalid-input-name"}}
+                                  @property="cleartextEmail" @customError={{t
+                            (validation-error-key this.changeset.error.cleartextEmail.validation)}} as |el|>
+                      <img class="d-inline encrypted-icon" src="/assets/images/encrypted_small.svg" alt="encrypted value">
+                      <el.control @name="cleartextEmail" tabindex="2"></el.control>
+                    </form.element>
+                  </form.group>
+                  <img {{on "click" (action "hideField" "email")}} class="d-inline delete-field" src="/assets/images/delete-white.svg" alt="delete attribute field">
+                </div>
+              {{/if}}
+              {{#if this.isCustomAttrFieldActive}}
+                <div id="custom-attr-field" class="col-md-6 pt-2 encryptable-form-field">
+                  <form.group class="col-md-12">
+                    <form.element @label={{t "labelCustomAttr"}} id="labelCustomAttr" class={{if
+                            this.changeset.error.cleartextCustomAttr.validation "invalid-input-name"}}
+                                  @property="label" @customError={{t
+                            (validation-error-key this.changeset.error.labelCustomAttr.validation)}} as |el|>
+                      <el.control @name="label" tabindex="2"></el.control>
+                    </form.element>
+                  </form.group>
+                  <img {{on "click" (action "hideField" "customAttr")}} class="d-inline delete-field" src="/assets/images/delete-white.svg" alt="delete attribute field">
+                  <form.group class="col-md-12">
+                    <form.element @label={{t "valueCustomAttr"}} id="valueCustomAttr" class={{if
+                            this.changeset.error.cleartextCustomAttr.validation "invalid-input-name"}}
+                                  @property="value" @customError={{t
+                            (validation-error-key this.changeset.error.valueCustomAttr.validation)}} as |el|>
+                      <img class="d-inline encrypted-icon" src="/assets/images/encrypted_small.svg" alt="encrypted value">
+                      <el.control @name="value" tabindex="2"></el.control>
+                    </form.element>
+                  </form.group>
+                </div>
+              {{/if}}
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-12">
-              <form.group class="col-md-12">
-                <form.element @label={{t "description"}} @property="description" @controlType="textarea"
-                              id="description" class="{{if
-                        this.changeset.error.description.validation "invalid-input"}} vertical-resize mt-3"
-                              customError={{t
-                        (validation-error-key this.changeset.error.description.validation)}} as |el|>
-                  <el.control tabindex="7"></el.control>
-                </form.element>
-              </form.group>
+          {{#if (gt this.items.length 1)}}
+            <div>
+              {{!-- Add property value and action to overwrite it because jquery can't access this.element from glimmer components --}}
+              <select id="add-field-dropdown" value={{this.selectedItem}} onchange={{action (mut this.selectedItem) value="target.value"}}>
+                {{#each this.items as |item|}}
+                  <option value={{item}}>{{t item}}</option>
+                {{/each}}
+              </select>
+              <img {{on "click" (action "addField")}} class="d-inline add-field ml-2" src="/assets/images/plus-white.svg" alt="add attribute field">
             </div>
-          </div>
+          {{/if}}
         </BsForm>
       </div>
     </Modal.body>
