Resolve bug with strange shadow on ember power select

--- a/frontend/app/styles/footer.scss
+++ b/frontend/app/styles/footer.scss
@@ -11,6 +11,10 @@
   border: none !important;
 }
 
+#locale-dropdown {
+  padding: 3px 16px 0 0 !important;
+}
+
 .ember-power-select-trigger {
   height: auto !important;
   line-height: 1.7 !important;
