fix update bug and continue styling frontend

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -193,6 +193,11 @@ li a {
   margin-left: 6px;
 }
 
+.encryptable-row-icons {
+  position: absolute;
+  margin-left: 43vw;
+}
+
 .icon-button {
   width: 18px !important;
   height: 18px !important;
