route back to previous url after sleep on focus

--- a/app/views/session/_oidc.html.haml
+++ b/app/views/session/_oidc.html.haml
@@ -1,6 +1,7 @@
+%script{src: "/wakeUp.js"}
 .login-form
   = image_tag "/assets/images/cryptopussy_oidc_sleep.svg", class: 'logo'
   .form-group
     .alert.alert-login-box.alert-info
       = t('.sleep')
-    = link_to(t('.submit'), Rails.application.routes.url_helpers.root_path, class: 'btn btn-primary')
+    = link_to t('.submit'),"",class: 'btn btn-primary'
