fix backend and style and improve frontend row component

--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -194,8 +194,14 @@ li a {
 }
 
 .encryptable-row-icons {
-  position: absolute;
-  margin-left: 43vw;
+  margin-left: auto;
+}
+
+@media (max-width: 1062px) {
+  .encryptable-row-attribute,
+  .encryptable-row-copy-button {
+    display: none !important;
+  }
 }
 
 .icon-button {
