--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -41,7 +41,7 @@
       </LinkTo>
       {{#unless (gt getAttributesAmount 2)}}
          {{#if @encryptable.usedAttrs.username}}
-            <div class="col-2 pr-0 d-none d-md-block">
+            <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
               <div class="hide-wrapper">
                 <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{format-cleartext @encryptable "username"}}/>
                 <a role="button"
@@ -51,7 +51,7 @@
                 </a>
               </div>
             </div>
-            <div class="col px-0 d-none d-md-block">
+            <div class="col px-0 d-none d-md-block encryptable-row-copy-button">
               <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "username")}}
                 disabled={{@encryptable.isUsernameBlank}} >
                 <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
@@ -62,7 +62,7 @@
             </div>
          {{/if}}
          {{#if @encryptable.usedAttrs.email}}
-           <div class="col-2 pr-0 d-none d-md-block">
+           <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
              <div class="hide-wrapper">
                <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{format-cleartext @encryptable "email"}}/>
                <a role="button"
@@ -72,7 +72,7 @@
                </a>
              </div>
            </div>
-           <div class="col px-0 d-none d-md-block">
+           <div class="col px-0 d-none d-md-block encryptable-row-copy-button">
              <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "email")}}
                disabled={{@encryptable.isEmailBlank}} >
                <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
@@ -83,13 +83,13 @@
            </div>
         {{/if}}
          {{#if @encryptable.usedAttrs.password}}
-            <div class="col-2 pr-0 d-none d-md-block">
+            <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
               <div class="hide-wrapper">
                 <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "password"}}/>
                 <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPasswordVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "password")}}>{{t "encryptable/credentials.show.show_password"}}</a>
               </div>
             </div>
-            <div class="col pl-0 d-none d-md-block">
+            <div class="col pl-0 d-none d-md-block encryptable-row-copy-button">
               <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "password")}}
                 disabled={{@encryptable.isPasswordBlank}} >
                 <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
@@ -100,13 +100,13 @@
             </div>
          {{/if}}
          {{#if @encryptable.usedAttrs.token}}
-           <div class="col-2 pr-0 d-none d-md-block">
+           <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
              <div class="hide-wrapper">
                <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "token"}}/>
                <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isTokenVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "token")}}>{{t "encryptable/credentials.show.show_token"}}</a>
              </div>
            </div>
-           <div class="col pl-0 d-none d-md-block">
+           <div class="col pl-0 d-none d-md-block encryptable-row-copy-button">
              <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "token")}}
                disabled={{@encryptable.isTokenBlank}} >
                <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
@@ -117,13 +117,13 @@
            </div>
          {{/if}}
          {{#if @encryptable.usedAttrs.pin}}
-            <div class="col-2 pr-0 d-none d-md-block">
+            <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
               <div class="hide-wrapper">
                 <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "pin"}}/>
                 <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPinVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "pin")}}>{{t "encryptable/credentials.show.show_pin"}}</a>
               </div>
             </div>
-            <div class="col pl-0 d-none d-md-block">
+            <div class="col pl-0 d-none d-md-block encryptable-row-copy-button">
               <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "pin")}}
                 disabled={{@encryptable.isPinBlank}} >
                 <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
@@ -132,9 +132,25 @@
                 {{/unless}}
               </button>
             </div>
-          {{/if}}
+         {{/if}}
+         {{#if @encryptable.usedAttrs.custom_attr}}
+           <div class="col-2 pr-0 d-none d-md-block encryptable-row-attribute">
+             <div class="hide-wrapper">
+               <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "customAttr"}}/>
+               <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isCustomAttrVisible "visibility-hidden"}}"{{on "click" (action this.showAttribute "customAttr")}}>{{t "encryptable/credentials.show.show_custom_attr"}}</a>
+             </div>
+           </div>
+           <div class="col pl-0 d-none d-md-block encryptable-row-copy-button">
+             <button class="btn btn-light copy-btn" {{on "click" (action this.copyAttribute "customAttr")}}
+               disabled={{@encryptable.isCustomAttrBlank}} >
+               <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+               {{#unless @encryptable.isCustomAttrBlank}}
+                 <BsTooltip @title={{t "encryptable/credentials.show.copy_custom_attr"}} @delayShow="500" />
+               {{/unless}}
+             </button>
+           </div>
+        {{/if}}
       {{/unless}}
-
       <div class="col-md-auto d-none d-md-block encryptable-row-icons">
         <DeleteWithConfirmation @class="mx-1" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
           <img class="icon-medium-button d-inline" src="/assets/images/delete.svg" alt="delete">
